--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://127.0.0.1:8000",
+  "secure" : false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
